# Gen-Agentic-AI

./: .gitignore
brochure_generator/: README.md  main.py  pyproject.toml
conversation_between_ai/: pyproject.toml  two_ai.py
function_calling/: pyproject.toml
function_calling/app/: __init__.py  fn_calling.ipynb  logConfig.py  main.py  test.py
gradio_ui/: chat_interface.ipynb  pyproject.toml  simple_interface.ipynb
simple_ai_tutor/: README.md  main.py  pyproject.toml  toke_model_info.ipynb
web_search_summerizer/: main.py  pyproject.toml
